client/assets/styles/scss/popover/popover-dns-mappings.scss
.popover-dns-mappings {
  max-width: none;
  width: 345px;

  .popover-view {
    height: 100%;
    width: 100%;
  }

  // list all elements that transition
  .list,
  .popover-header .span,
  .icons-arrow-backward,
  .btn-toggle {
    transition: opacity .15s ease-in, transform .3s ease-in-out;
  }

  // rows
  .tr {
    cursor: pointer;
    height: 54px;
    padding: 0;

    &:hover .icons-arrow-forward {
      color: $gray;
    }

    &:active {

      .cell,
      .cell::after {
        color: $purple-light;
      }

      .icons-arrow-forward {
        color: $purple-light;
      }
    }

    // override borders
    + .tr {
      border: 0;
    }

    .icons-arrow-forward {
      color: $gray-light;
      height: 100%;
      margin: 0;
      right: -9px;
    }
  }

  // cells
  .cell {
    color: $gray-dark;
    font-size: 14px;
    font-weight: $weight-bold;
    height: 54px;
    padding: 12px 0 0;
    position: relative;

    &:first-child {

      &::after {
        color: $gray-light;
        content: '→';
        display: block;
        font-size: 18px;
        line-height: 40px;
        position: absolute;
        right: 9px;
        top: -1px;
      }

      .text-overflow {
        padding-right: 24px;
      }
    }
  }

  // toggle
  .btn-toggle {
    margin: 9px auto 5px;

    > .btn {
      width: 105px;
    }
  }

  .popover-list-toggle {
    position: absolute;
    width: 100%;
  }

  .icons-status {
    margin-right: 5px;

    // indent team/private label
    ~ .small {
      margin-left: 14px;
    }
  }

  // branch container lists
  .list-item {
    color: $gray-dark;
    font-size: 14px;
    font-weight: $weight-bold;
    padding: 0 15px;
  }
}

